--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,13 @@ body {
   top: 0;
   transform: translateX(-40px);
 }
+
+
+/* Hide scrollbar for all browsers */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
